﻿*******************************************************************

   Название проекта : OPOS драйвер WebKassa
   Компания         : ШТРИХ-М, Россия 
                     (495) 787-60-90, www.shtrih-m.ru

*******************************************************************

  OposWebKassa_0.93.exe
  26 декабря 2024 14:46
  
  [+] Добавлена поддержка принтера Posiflex
	  
*******************************************************************

  OposWebKassa_0.92.exe
  19 декабря 2024 18:36
  
  [+] Добавлено поле "тип налога" в налоговые ставки, 
      чтобы отличались налоговые ставки "НДС 0%" и "БЕЗ НДС".
  
*******************************************************************

  OposWebKassa_0.91.exe
  12 декабря 2024 18:45
  
  [+] Сделана печать QR кода справа от текста
      В шаблоне чека этот элемент должен иметь тип STYLE_QR_CODE_PM = 9.
	  Чтобы изменить шаблон чека нужно изменить поле "TextStyle" - 
	  вместо значения STYLE_QR_CODE = 8 установить STYLE_QR_CODE_PM = 9.
	  QR код печатается на принтере Rongta, на принтере OA-48
	  страничный режим (page mode) не поддерживается.
  
*******************************************************************

  OposWebKassa_0.90.exe
  9 декабря 2024 14:40
  
  [-] Исправлена ошибка печати длинного клише
  [+] Уменьшен размер QR кода при печати его в графике
  
*******************************************************************

  OposWebKassa_0.89.exe
  6 декабря 2024 15:15
  
  [-] Исправлена ошибка печати чека на узкой ленте
  [+] Добавлена настройка соответствия названий единиц измерения
  
*******************************************************************

  OposWebKassa_0.88.exe
  2 декабря 2024 13:15
  
  [-] Исправлена ошибка чтение и записи параметров в реестр
  
*******************************************************************

  OposWebKassa_0.87.exe
  19 ноября 2024 16:15
  
  [-] Исправлена ошибка межстрочного интервала
  [-] Исправлена ошибка загрузки шрифтов в принтер Rongta
	  