@@ -1,6 +1,6 @@
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION 1,13,0,93
-PRODUCTVERSION 1,13,0,93 
+FILEVERSION 1,13,0,94
+PRODUCTVERSION 1,13,0,94 
 FILEFLAGSMASK 0x3fL
 FILEFLAGS 0x0L
 FILEOS 0x4L
@@ -13,7 +13,7 @@ BEGIN
     BEGIN
       VALUE "CompanyName", "SHTRIH-M\0"
       VALUE "FileDescription", "OPOS test utility\0"
-      VALUE "FileVersion", "1.13.0.93\0"
+      VALUE "FileVersion", "1.13.0.94\0"
       VALUE "InternalName", "OPOS test\0"
       VALUE "LegalCopyright", "SHTRIH-M \251 2013 \0"
       VALUE "OriginalFilename", "OposTest.exe\0"
