@@ -1,43 +1,21 @@
 [Closed Files]
-File_0=SourceModule,'D:\Projects\OposWebkassa\test\OposWebkassaTest\units\duWebkassaImpl.pas',0,1,1551,38,1559,0,0
-File_1=SourceModule,'D:\Projects\OposWebkassa\src\Shared\RegExpr.pas',0,1,2328,48,2341,0,0
-File_2=SourceModule,'D:\Projects\OposWebkassa\src\OposWebkassa\Units\WebkassaImpl.pas',0,1,13,60,24,0,0
-File_3=SourceModule,'D:\Projects\OposWebkassa\src\Shared\PosPrinterRongta.pas',0,1,1,26,14,0,0
-File_4=SourceModule,'D:\Projects\OposWebkassa\src\Shared\EscPrinterRongta.pas',0,1,1,1,1,0,0
-File_5=SourceModule,'D:\Projects\OposWebkassa\test\WebkassaAccTest\units\duWebkassaClient.pas',0,1,1,1,1,0,0
-File_6=SourceModule,'D:\Projects\OposWebkassa\src\OposWebkassa\units\WebkassaClient.pas',0,1,498,29,509,0,0
-File_7=SourceModule,'D:\Projects\OposWebkassa\src\Shared\JsonUtils.pas',0,1,12,1,23,0,0
-File_8=SourceModule,'D:\Projects\OposWebkassa\src\OposConfig\Fmu\fmuPrinter.pas',0,1,430,28,449,1,0
-File_9=SourceModule,'D:\Projects\OposWebkassa\src\Shared\PrinterParameters.pas',0,1,689,41,707,0,0
+File_0=SourceModule,'D:\Projects\OposWebkassa\src\Shared\EscPrinterPosiflex.pas',0,1,1449,49,1463,0,0
+File_1=SourceModule,'D:\Projects\OposWebkassa\src\Shared\EscPrinterUtils.pas',0,1,1,1,1,0,0
+File_2=SourceModule,'D:\Projects\OposWebkassa\src\Shared\PosPrinterPosiflex.pas',0,1,2455,32,2472,0,0
+File_3=SourceModule,'D:\Projects\OposWebkassa\test\OposWebkassaTest\units\duWebkassaImpl.pas',0,1,1551,38,1559,0,0
+File_4=SourceModule,'D:\Projects\OposWebkassa\src\Shared\RegExpr.pas',0,1,2328,48,2341,0,0
+File_5=SourceModule,'D:\Projects\OposWebkassa\src\OposWebkassa\Units\WebkassaImpl.pas',0,1,13,60,24,0,0
+File_6=SourceModule,'D:\Projects\OposWebkassa\src\Shared\PosPrinterRongta.pas',0,1,1,26,14,0,0
+File_7=SourceModule,'D:\Projects\OposWebkassa\src\Shared\EscPrinterRongta.pas',0,1,1,1,1,0,0
+File_8=SourceModule,'D:\Projects\OposWebkassa\test\WebkassaAccTest\units\duWebkassaClient.pas',0,1,1,1,1,0,0
+File_9=SourceModule,'D:\Projects\OposWebkassa\src\OposWebkassa\units\WebkassaClient.pas',0,1,498,29,509,0,0
 
 [Modules]
-Module0=D:\Projects\OposWebkassa\src\Shared\EscPrinterPosiflex.pas
-Module1=D:\Projects\OposWebkassa\src\Shared\EscPrinterUtils.pas
-Module2=D:\Projects\OposWebkassa\src\Shared\PosPrinterPosiflex.pas
-Count=3
-EditWindowCount=1
+Count=0
+EditWindowCount=0
 TypeLibWindowCount=1
 
-[D:\Projects\OposWebkassa\src\Shared\EscPrinterPosiflex.pas]
-ModuleType=SourceModule
-FormState=0
-FormOnTop=0
-
-[D:\Projects\OposWebkassa\src\Shared\EscPrinterUtils.pas]
-ModuleType=SourceModule
-FormState=0
-FormOnTop=0
-
-[D:\Projects\OposWebkassa\src\Shared\PosPrinterPosiflex.pas]
-ModuleType=SourceModule
-FormState=0
-FormOnTop=0
-
-[D:\Projects\OposWebkassa\test\OposWebkassaTest\OposWebkassaTest.dpr]
-FormState=0
-FormOnTop=0
-
-[D:\Projects\OposWebkassa\src\OposWebkassa\OposWebkassa.dpr]
+[D:\Projects\OposWebkassa\test\WebkassaAccTest\WebkassaAccTest.dpr]
 FormState=0
 FormOnTop=0
 
@@ -53,15 +31,15 @@ FormOnTop=0
 FormState=0
 FormOnTop=0
 
+[D:\Projects\OposWebkassa\src\OposWebkassa\OposWebkassa.dpr]
+FormState=0
+FormOnTop=0
+
 [D:\Projects\OposWebkassa\src\OposWebkassa\OposWebkassa.tlb]
 FormState=0
 FormOnTop=0
 
-[D:\Projects\OposWebkassa\test\OposWebkassaTest\OposWebkassaTestLib.dpr]
-FormState=0
-FormOnTop=0
-
-[D:\Projects\OposWebkassa\test\WebkassaAccTest\WebkassaAccTest.dpr]
+[D:\Projects\OposWebkassa\test\OposWebkassaTest\OposWebkassaTest.dpr]
 FormState=0
 FormOnTop=0
 
@@ -69,55 +47,9 @@ FormOnTop=0
 FormState=0
 FormOnTop=0
 
-[EditWindow0]
-ViewCount=3
-CurrentView=0
-View0=0
-View1=1
-View2=2
-CodeExplorer=CodeExplorer@EditWindow0
-MessageView=MessageView@EditWindow0
-Create=1
-Visible=1
-State=2
-Left=367
-Top=140
-Width=1302
-Height=682
-MaxLeft=-8
-MaxTop=107
-MaxWidth=1936
-MaxHeight=941
-ClientWidth=1920
-ClientHeight=902
-LeftPanelSize=0
-LeftPanelClients=CodeExplorer@EditWindow0
-LeftPanelData=00000400010000000C000000436F64654578706C6F7265720000000000000000000000000000000000FFFFFFFF
-RightPanelSize=0
-BottomPanelSize=0
-BottomPanelClients=MessageView@EditWindow0
-BottomPanelData=00000400010000000B0000004D657373616765566965770000000000000000000000000000000000FFFFFFFF
-
-[View0]
-Module=D:\Projects\OposWebkassa\src\Shared\EscPrinterPosiflex.pas
-CursorX=116
-CursorY=1458
-TopLine=1449
-LeftCol=1
-
-[View1]
-Module=D:\Projects\OposWebkassa\src\Shared\EscPrinterUtils.pas
-CursorX=1
-CursorY=1
-TopLine=1
-LeftCol=1
-
-[View2]
-Module=D:\Projects\OposWebkassa\src\Shared\PosPrinterPosiflex.pas
-CursorX=32
-CursorY=2472
-TopLine=2455
-LeftCol=1
+[D:\Projects\OposWebkassa\test\OposWebkassaTest\OposWebkassaTestLib.dpr]
+FormState=0
+FormOnTop=0
 
 [TypeLibEditWindow0]
 Create=1
@@ -428,38 +360,6 @@ ClientWidth=367
 ClientHeight=156
 TBDockHeight=151
 LRDockWidth=383
-Dockable=1
-
-[CodeExplorer@EditWindow0]
-Create=1
-Visible=0
-State=0
-Left=-171
-Top=-9
-Width=140
-Height=305
-MaxLeft=-1
-MaxTop=-1
-ClientWidth=140
-ClientHeight=305
-TBDockHeight=305
-LRDockWidth=140
-Dockable=1
-
-[MessageView@EditWindow0]
-Create=1
-Visible=0
-State=0
-Left=-177
-Top=-707
-Width=443
-Height=85
-MaxLeft=-1
-MaxTop=-1
-ClientWidth=443
-ClientHeight=85
-TBDockHeight=85
-LRDockWidth=443
 Dockable=1
 
 [DockHosts]
