@@ -1,26 +1,9 @@
 [Tests]
-OposWebkassaTest.exe=1
 
 [Tests.OposWebkassaTest.exe]
 TJSONTest=1
 TWebkassaClientTest2=1
 TWebkassaTest=0
-TWebkassaClientTest=1
-TSalesReceiptTest=1
-TTranslationTest=1
-TOposDeviceTest=1
-TReceiptTemplateTest=1
-TPrinterParametersTest=1
-TWebkassaImplTest3=1
-TTextDocumentTest=1
-TWebkassaImplTest4=1
-TOposUtilsTest=1
-TWebkassaImplTest2=1
-TPosWinPrinterTest=1
-TPosEscPrinterTest=1
-TLogFileTest=1
-TWebkassaImplTest=1
-TRegExprTest=1
 
 [Tests.OposWebkassaTest.exe.TWebkassaClientTest]
 CheckAuthenticate=1
@@ -30,23 +13,6 @@ TestMoneyOperationCommand=1
 AuthenticateTest2=0
 TestAlternativeDomainNames=1
 TestIdHeaderList=0
-TestAuthenticate=1
-TestChangeToken=1
-TestZReportRequest=1
-TestZReportAnswer=1
-TestZReportAnswer2=1
-TestZReport=1
-TestXReport=1
-TestJournalReport=1
-TestReadCahiers=1
-TestReadReceipt=1
-TestReadReceiptText=1
-TestReadReceiptText2=1
-TestReadUnits=1
-TestUploadOrder=1
-TestMoneyOperation=1
-TestSendReceipt=1
-TestSendReceipt2=1
 
 [GUITestRunner Config]
 AutoSave=1
@@ -91,31 +57,6 @@ PrintHeaderAndCut=1
 TestNonFiscal2=1
 TestClaim=1
 TestFiscalReceipt3=1
-TestZReport=1
-TestXReport=1
-TestCashIn=1
-TestCashOut=1
-TestNonFiscal=1
-OpenClaimEnable=1
-TestFiscalReceipt=1
-TestFiscalReceipt2=1
-TestCoverError=1
-TestRecEmpty=1
-TestStatusUpateEvent=1
-TestDuplicateReceipt=1
-TestSetHeaderLines=1
-TestSetTrailerLines=1
-TestReceiptTemplate=1
-TestReceiptTemplate3=1
-TestGetJsonField=1
-TestEncoding=1
-TestBarcode=1
-TestFiscalreceiptType=1
-TestFiscalreceiptType2=1
-TestZeroFiscalReceipt=1
-TestPrintDuplicate=1
-TestPrintDuplicate2=1
-TestRecLineChars=1
 
 [Tests.OposWebkassaTest.exe.TWebkassaClientTest2]
 TestAuthenticate=1
@@ -140,76 +81,38 @@ TestSendReceipt=0
 
 [Tests.OposWebkassaTest.exe.TSalesReceiptTest]
 TestReceiptAdjustments=1
-TestEncoding=1
-TestPrintRecItem=1
-TestPrintRecVoid=1
-TestItemAdjustment=1
-TestSubtotalAdjustment=1
-TestReceiptWithChange=1
-TestDirectIO=1
 
 [Tests.OposWebkassaTest.exe.TPrinterParametersTest]
-CheckLoadReg=1
-CheckLoadParams=1
-CheckSetDefaults=1
-CheckDefaultParams=1
-CheckGetTranslationText=1
-CheckArrayOfString=1
 
 [Tests.OposWebkassaTest.exe.TOposUtilsTest]
 TestRegExpression=1
-TestCeil=1
-TestStrToNibble=1
 
 [Tests.OposWebkassaTest.exe.TPosEscPrinterTest]
-EncodeUserCharacter=1
-TestPrintNormal=1
-TestRecLineChars=1
 
 [Tests.OposWebkassaTest.exe.TTranslationTest]
-CheckLoadSave=1
 
 [Tests.OposWebkassaTest.exe.TTextDocumentTest]
-TestAdd=1
-TestAddItem=1
 
 [Tests.OposWebkassaTest.exe.TReceiptTemplateTest]
-TestSave=1
-TestUnicode=1
 
 [Tests.OposWebkassaTest.exe.TWebkassaImplTest2]
 TestNonFiscal=1
 TestReceiptTemplate=1
 TestPrintQRCodeAsGraphics=1
 TestPrintDatamatrixBarcode=1
-TestMockMethod=1
-TestMockMethod2=1
-TestMockMethod3=1
-OpenService=1
-ClaimDevice=1
-EnableDevice=1
-OpenClaimEnable=1
-TestRenderQRCode=1
 
 [Tests.OposWebkassaTest.exe.TOposDeviceTest]
-TestDataConversion=1
 
 [Tests.OposWebkassaTest.exe.TWebkassaImplTest3]
 TestPrintQRCode=1
 TestPrintBarcode=1
-TestPrintBarcodeFailed=1
-TestPrintBarcodeAsBarcode=1
-TestPrintBarcodeAsBarcode2=1
 
 [Tests.OposWebkassaTest.exe.TLogFileTest]
-WriteUnicode=1
-WriteUnicode2=1
 
 [Tests.OposWebkassaTest.exe.TWebkassaImplTest4]
 
 [Tests.OposWebkassaTest.exe.TPosWinPrinterTest]
 TestPrintNormal=1
-TestRecLineChars=1
-TestPrintReceipt=1
+
 [Tests.OposWebkassaTest.exe.TRegExprTest]
-TestFontNumber=1
+
