@@ -11,7 +11,7 @@ uses
   TntClasses, Opos, OposPtr, OposPtrUtils, OposEsc,
   // This
   LogFile, PosWinPrinter, MockPrinterPort, PrinterPort, StringUtils,
-  CustomPrinter;
+  CustomPrinter, FileUtils;
 
 type
   { TPosWinPrinterTest }
@@ -105,19 +105,32 @@ begin
 end;
 
 procedure TPosWinPrinterTest.TestPrintReceipt;
+var
+  BitmapData: string;
+  BitmapData2: string;
 begin
   OpenClaimEnable;
+
+  PtrCheck(FPrinter.TransactionPrint(PTR_S_RECEIPT, PTR_TP_TRANSACTION));
   PtrCheck(FPrinter.PrintNormal(PTR_S_RECEIPT, ESC_Normal + 'Normal text' + CRLF));
   PtrCheck(FPrinter.PrintNormal(PTR_S_RECEIPT, ESC_Bold + 'Bold text' + CRLF));
   PtrCheck(FPrinter.PrintNormal(PTR_S_RECEIPT, ESC_DoubleWide + 'Double wide text' + CRLF));
   PtrCheck(FPrinter.PrintNormal(PTR_S_RECEIPT, ESC_DoubleHigh + 'Double high text' + CRLF));
   PtrCheck(FPrinter.PrintNormal(PTR_S_RECEIPT, ESC_Normal + 'Normal text 2' + CRLF));
-  PtrCheck(FPrinter.PrintNormal(PTR_S_RECEIPT, ESC_DoubleHighWide + 'Double high wide text' + CRLF));
-  //PtrCheck(FPrinter.PrintBitmap(PTR_S_RECEIPT, 'QRCodeBitmap.bmp', PTR_BM_ASIS, PTR_BM_CENTER));
+
+  PtrCheck(FPrinter.PrintNormal(PTR_S_RECEIPT, 'Bitmap' + CRLF));
+  PtrCheck(FPrinter.PrintBitmap(PTR_S_RECEIPT, 'Logo.bmp', PTR_BM_ASIS, PTR_BM_CENTER));
+
+  PtrCheck(FPrinter.PrintNormal(PTR_S_RECEIPT, 'QR code barcode' + CRLF));
   PtrCheck(FPrinter.PrintBarCode(PTR_S_RECEIPT, 'Barcode', PTR_BCS_QRCODE,
     100, 100, PTR_BC_CENTER, PTR_BC_TEXT_NONE));
+  PtrCheck(FPrinter.TransactionPrint(PTR_S_RECEIPT, PTR_TP_NORMAL));
 
-  FWinPrinter.Bitmap.SaveToFile('TestPrintReceipt.bmp');
+  FWinPrinter.Bitmap.SaveToFile('PrintReceipt.bmp');
+  BitmapData := ReadFileData(GetModulePath + 'PrintReceipt.bmp');
+  BitmapData2 := ReadFileData(GetModulePath + 'PrintReceipt2.bmp');
+  CheckEquals(BitmapData, BitmapData2, 'Receipt bimap differs');
+  DeleteFile('PrintReceipt.bmp');
 end;
 
 initialization
