@@ -6,6 +6,13 @@
 
 *******************************************************************
 
+  OposWebKassa_0.94.exe
+  10 января 2025 18:18
+  
+  [-] Исправлена реализация класса TPosWinPrinter
+  
+*******************************************************************
+
   OposWebKassa_0.93.exe
   26 декабря 2024 14:46
   
